Add tested model

--- a/3 - sentiment/main.ipynb
+++ b/3 - sentiment/main.ipynb
@@ -2,40 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from preprocess_functions import *\n",
-    "\n",
     "import torch\n",
-    "#import pytorch_lightning as pl\n",
     "\n",
     "# PARAMETRY\n",
-    "current_dir = os.getcwd()#os.path.dirname(os.path.realpath(__file__))\n",
+    "current_dir = os.getcwd()\n",
     "INPUT_FILE = os.path.join(current_dir, \"sentiment.txt\")\n",
     "OUTPUT_DIR = current_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[  0,   0,   0, ..., 386,  28, 202],\n",
-       "        [  0,   0,   0, ..., 116,  28, 202],\n",
-       "        [  0,   0,   0, ..., 157, 166,  34],\n",
+       "(array([[  0,   0,   0, ...,  91, 120,  70],\n",
+       "        [  0,   0,   0, ...,  91, 120,  70],\n",
+       "        [  0,   0,   0, ...,  15,  20, 286],\n",
        "        ...,\n",
-       "        [  0,   0,   0, ..., 116,  28, 202],\n",
-       "        [  0,   0,   0, ..., 110, 121,  39],\n",
-       "        [  0,   0,   0, ..., 409, 275, 392]]),\n",
+       "        [  0,   0,   0, ..., 360, 190,  69],\n",
+       "        [  0,   0,   0, ..., 351, 363, 428],\n",
+       "        [  0,   0,   0, ...,  91, 120,  70]]),\n",
        " numpy.ndarray)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,23 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[  0,   0,   0,  ..., 386,  28, 202],\n",
-       "         [  0,   0,   0,  ..., 116,  28, 202],\n",
-       "         [  0,   0,   0,  ..., 157, 166,  34],\n",
+       "(tensor([[  0,   0,   0,  ...,  91, 120,  70],\n",
+       "         [  0,   0,   0,  ...,  91, 120,  70],\n",
+       "         [  0,   0,   0,  ...,  15,  20, 286],\n",
        "         ...,\n",
-       "         [  0,   0,   0,  ..., 116,  28, 202],\n",
-       "         [  0,   0,   0,  ..., 110, 121,  39],\n",
-       "         [  0,   0,   0,  ..., 409, 275, 392]], dtype=torch.int32),\n",
+       "         [  0,   0,   0,  ..., 360, 190,  69],\n",
+       "         [  0,   0,   0,  ..., 351, 363, 428],\n",
+       "         [  0,   0,   0,  ...,  91, 120,  70]], dtype=torch.int32),\n",
        " torch.Tensor)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +86,7 @@
        "torch.Size([7086, 40])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -108,43 +106,64 @@
        "torch.Size([7086])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_num = np.array(Y)\n",
-    "y_ten = torch.tensor(y_num)\n",
-    "y_ten.shape"
+    "labels = np.array(Y)\n",
+    "labels = torch.tensor(labels).float()#.unsqueeze(1).float()\n",
+    "labels.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
-       "          0,   0,   0,   0,   0,   0,   0,   0, 291, 386,  28, 202],\n",
-       "       dtype=torch.int32)"
+       "(tensor([  0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "           0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,   0,\n",
+       "           0,   0,   0,   0,   0,   0,   0,   0, 202,  91, 120,  70],\n",
+       "        dtype=torch.int32),\n",
+       " tensor(1.))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_sequences[0]"
+    "input_sequences[1], labels[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('I love Brokeback Mountain....', 1)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_text[1] , Y[1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,78 +205,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_data=input_sequences\n",
-    "labels = y_ten.unsqueeze(1).float()"
+    "# Calculate accuracy (a classification metric)\n",
+    "def accuracy_fn(y_true, y_pred):\n",
+    "    correct = torch.eq(y_true, y_pred).sum().item() # torch.eq() calculates where two tensors are equal\n",
+    "    acc = (correct / len(y_pred)) * 100 \n",
+    "    return acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(torch.Size([7086, 40]), torch.Size([7086, 1]))"
+       "(torch.Size([4747, 40]),\n",
+       " torch.Size([2339, 40]),\n",
+       " torch.Size([4747]),\n",
+       " torch.Size([2339]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "input_data.shape, labels.shape"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(input_sequences, labels, test_size=0.33, random_state=42)\n",
+    "\n",
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_model(model, optimizer, criterion, input_data, labels, num_epochs):\n",
-    "    model.train()\n",
-    "    for epoch in range(num_epochs):\n",
-    "        optimizer.zero_grad()\n",
-    "        output = model(input_data)\n",
-    "        loss = criterion(output, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        if (epoch+1) % 10 == 0:\n",
-    "            print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item():.4f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [10/100], Loss: 0.6877\n",
-      "Epoch [20/100], Loss: 0.6794\n",
-      "Epoch [30/100], Loss: 0.6722\n",
-      "Epoch [40/100], Loss: 0.6625\n",
-      "Epoch [50/100], Loss: 0.6463\n",
-      "Epoch [60/100], Loss: 0.6218\n",
-      "Epoch [70/100], Loss: 0.5882\n",
-      "Epoch [80/100], Loss: 0.5466\n",
-      "Epoch [90/100], Loss: 0.5006\n",
-      "Epoch [100/100], Loss: 0.4600\n"
+      "Epoch: 0 | Loss: 0.19963, Accuracy: 97.79% | Test loss: 0.22067, Test acc: 96.24%\n",
+      "Epoch: 10 | Loss: 0.18643, Accuracy: 97.96% | Test loss: 0.20797, Test acc: 96.45%\n",
+      "Epoch: 20 | Loss: 0.17498, Accuracy: 98.08% | Test loss: 0.19802, Test acc: 96.58%\n",
+      "Epoch: 30 | Loss: 0.16491, Accuracy: 98.29% | Test loss: 0.18898, Test acc: 96.84%\n",
+      "Epoch: 40 | Loss: 0.15489, Accuracy: 98.48% | Test loss: 0.18167, Test acc: 96.84%\n",
+      "Epoch: 50 | Loss: 0.14647, Accuracy: 98.61% | Test loss: 0.17502, Test acc: 96.75%\n",
+      "Epoch: 60 | Loss: 0.13916, Accuracy: 98.69% | Test loss: 0.17060, Test acc: 96.75%\n",
+      "Epoch: 70 | Loss: 0.13265, Accuracy: 98.74% | Test loss: 0.16601, Test acc: 96.71%\n",
+      "Epoch: 80 | Loss: 0.12645, Accuracy: 98.82% | Test loss: 0.16222, Test acc: 96.79%\n",
+      "Epoch: 90 | Loss: 0.12123, Accuracy: 98.93% | Test loss: 0.15819, Test acc: 96.79%\n"
      ]
     }
    ],
    "source": [
-    "num_epochs = 100\n",
-    "train_model(model, optimizer, criterion, input_data, labels, num_epochs)"
+    "torch.manual_seed(42)\n",
+    "\n",
+    "epochs = 100\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "    model.train()\n",
+    "\n",
+    "    y_logits = model(X_train).squeeze() # squeeze to remove extra `1` dimensions, this won't work unless model and data are on same device \n",
+    "    y_pred = torch.round(y_logits) # turn logits -> pred probs -> pred labls\n",
+    "    loss = criterion(y_logits, y_train) \n",
+    "    acc = accuracy_fn(y_true=y_train, y_pred=y_pred)\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    ### Testing\n",
+    "    model.eval()\n",
+    "    with torch.inference_mode():\n",
+    "        test_logits = model(X_test).squeeze() \n",
+    "        test_pred = torch.round(test_logits)\n",
+    "        test_loss = criterion(test_logits,y_test)\n",
+    "        test_acc = accuracy_fn(y_true=y_test,y_pred=test_pred)\n",
+    "\n",
+    "    # Print out what's happening every 10 epochs\n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f\"Epoch: {epoch} | Loss: {loss:.5f}, Accuracy: {acc:.2f}% | Test loss: {test_loss:.5f}, Test acc: {test_acc:.2f}%\")"
    ]
   }
  ],
